--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
                     background-image: url(./assets/bg-shadow.png);
                     background-size: cover;
                     background-repeat: no-repeat;
+                    border-radius: 20px;
+                    background-color: black;
                     
 }
 
