news letter section & fotter updated

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,13 @@
 .active{
                   background-color:#E7FE29 
 }
+
+  .newsletter {
+                    position: absolute;
+                    top: -0%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    text-align: center;
+                    border-radius: 15px;
+                  }
+                  
